2013-03-11  William A. Perkins  <william.perkins@pnnl.gov>

	* met_zone.f90 (met_zone_heat_flux_zone)
	(met_zone_heat_flux_byid, met_zone_evaporation_zone): added

	* accumulator.f90 (accumulate_tdg): use met zone 1 for barometric
	pressure

	* scalars_source.f90 (scalar_source_timestep): call met_zone_update

	* tdg_source.f90 (tdg_source_term): use met zone 1

	* temperature_source.f90 (temperature_source_term): use met zone 1

	* constants.f90 (constants): metric_density needs to be here

	* gastemp/energy_flux_module.f90 (net_heat_flux): make a
	coefficient array and pass to all atmospheric exchange routines

	* met_data_module.f90: no longer used

2013-03-05  William A. Perkins  <william.perkins@pnnl.gov>

	* Makefile.am (check_PROGRAMS): add met_spec_test
	(mass2_SOURCES): add met_zone.f90

	* met_spec_test.f90 (met_spec_test): a test for reading met zone
	specs 

	* met_zone.f90 (met_zone): add a module for dealing with separate
	met zones

	* met_data_module.f90 (read_met_data, update_met_data): use a
	met_time_series instead of a plain time_series

2013-03-04  William A. Perkins  <william.perkins@pnnl.gov>

	* scalars_source.f90 (scalar_source_timestep): update the
	"const_series_rec" 

	* temperature_source.f90 (temperature_source): use a
	"const_series_rec" instead of a time_series_rec

	* test/temperature/evaporation: a test for evaporation with
	recharge 

	* hydro_solve.f90 (depth_solve): add evaporation into depth
	correction equation

	* block_bc_module.f90 (read_scalar_bcspecs): correct table count
	when 'SOURCE' bc's are specified

	* mass2_main_025.f90 (apply_scalar_bc): actually handle 'SOURCE'
	bc's 

2013-03-01  William A. Perkins  <william.perkins@pnnl.gov>

	* mass2_main_025.f90 (apply_scalar_source): if condensation
	occurs, give it the air temperature
	(update): set hydrodynamic evaporation if called for

	* temperature_source.f90 (temperature_source): add evaporate flag
	and code to read it
	(evaporation_rate): output is now in ft/s
